--- a/jscripts/tiny_mce/themes/advanced/skins/o2k7/ui.css
+++ b/jscripts/tiny_mce/themes/advanced/skins/o2k7/ui.css
@@ -29,6 +29,8 @@
 .o2k7Skin .mceToolbar .mceToolbarEndListBox span {display:none}
 .o2k7Skin span.icon, .o2k7Skin img.icon {display:block; width:20px; height:20px}
 .o2k7Skin .icon {background:url(../../img/icons.gif) no-repeat 20px 20px}
+.o2k7Skin td.center table {margin:0 auto;}
+.o2k7Skin td.right table {margin:0 0 0 auto;}
 
 /* Button */
 .o2k7Skin .mceButton {display:block; background:url(img/button_bg.png); width:22px; height:22px}
